# study

./: Makefile模板.c  jiaqun.c  svn.docx
mfsInit/: Makefile  mfsInit  mfs_file_func.c  mfs_init.c  mfs_init.h  mfs_shm_func.c  mpf_mfs_directfile.txt
mfsInit/linux/: mfsInit
oci/: .Makefile.bk.swp  Makefile  Makefile.am  Makefile.bk  Makefile.in  config.h  config.status  configure  configure.ac  makefile.in  tags  test  test.c  test.c.20170423  test.c.ocilib  test.c.old
oci/.deps/: test.Po
oci/autom4te.cache/: output.1  traces.0  traces.1
oci/linux/: test
